# Multivariable-Dynamic-Model

./: README.md  pyproject.toml
coupled-growth_competition/: coupled-growth_competition.py  nullcline.py
